--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "ng6-starter",
-  "version": "0.0.1",
-  "description": "Starter for Angular + ES6 + (Webpack or JSPM)",
+  "name": "angular2-migration",
+  "version": "0.1.0",
+  "description": "Angular2 Migration of Simplified TodoMVC App",
   "main": "index.js",
   "dependencies": {
     "angular": "^1.4.4",
     "angular-ui-router": "^0.2.15",
-    "lodash": "^3.8.0",
-    "normalize.css": "^3.0.3"
+    "lodash": "^3.8.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.15",
